header.html を更新

--- a/components/header.html
+++ b/components/header.html
@@ -29,16 +29,14 @@
     </a>
   </div>
 
-  <!-- 右：検索ボタン -->
+    <!-- 右：検索ボタン + ヘルプボタン -->
   <div class="header-right">
-    <button id="search-open" class="header-icon-btn header-search-btn">
+    <button id="search-open" class="header-icon-btn header-search-btn" aria-label="検索">
       <i class="fa-solid fa-magnifying-glass"></i>
     </button>
-    <!-- 並び替えボタンを使うならここに -->
-    <!--
-    <button id="sort-open" class="header-icon-btn header-sort-btn">
-      <i class="fa-solid fa-arrow-down-a-z"></i>
+
+    <button id="help-open" class="header-icon-btn header-help-btn" aria-label="ヘルプ">
+      <i class="fa-regular fa-circle-question"></i>
     </button>
-    -->
   </div>
 </header>
