header.html を更新

--- a/components/header.html
+++ b/components/header.html
@@ -14,9 +14,18 @@
 
     <!-- スライドメニューとして使うナビ -->
     <nav class="header-nav" id="header-nav">
-      <a href="index.html">HOME</a>
-      <a href="about.html">ABOUT</a>
-      <a href="links.html">LINKS</a>
+      <a href="index.html" class="header-nav-link">
+        <span class="nav-label-en">HOME</span>
+        <span class="nav-label-ja">キャラクター一覧</span>
+      </a>
+      <a href="about.html" class="header-nav-link">
+        <span class="nav-label-en">ABOUT</span>
+        <span class="nav-label-ja">活動について</span>
+      </a>
+      <a href="links.html" class="header-nav-link">
+        <span class="nav-label-en">LINKS</span>
+        <span class="nav-label-ja">オフィシャルリンク</span>
+      </a>
     </nav>
   </div>
 
