header.html を更新

--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-  <div class="bubbles">
+  <div class="bubbles bubbles-header">
     <span></span><span></span><span></span><span></span><span></span>
     <span></span><span></span><span></span><span></span>
   </div>
